# finance_analyzer

./: Cargo.toml  README.md  plan.md  requirements.md
src/: csv.rs  lib.rs  main.rs
src/db/: category.rs  connection.rs
src/models/: category.rs  mod.rs  transaction.rs
src/ui/: app.rs  mod.rs  render.rs
src/utils/: csv.rs
