[package]
name = "finance-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26.0"
crossterm = "0.27.0"
chrono = { version = "0.4.34", features = ["serde"] }
rust_decimal = { version = "1.34.3", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
csv = "1.3.0"
anyhow = "1.0.80"
